# tire-check-tool

./: .gitignore  .pre-commit-config.yaml  HW3_report.md  README.md  commands.py  data.dvc  pretrained.dvc  pyproject.toml  req.txt
.dvc/: config
configs/: default.yaml
tirechecktool/: constants.py  dataset.py  export.py  infer.py  model.py  run_server.py  train.py  utils.py
tirechecktool/conf/: default.yaml
triton/: Dockerfile  docker-compose.yml
triton/model_repository/tire_quality_classifier/: config.pbtxt
