[tool.poetry]
name = "tirechecktool"
version = "0.1.0"
description = "Learning project for ML Ops course - python package for tire quality testing"
authors = ["Bezuglyj Vitaly <bevidm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
scikit-learn = "^1.3.1"
pandas = "^2.0.3"
opendatasets = "^0.1.22"
pathlib = "^1.0.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
Flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
