[tool.poetry]
name = "tirechecktool"
version = "0.1.0"
description = "Learning project for ML Ops course - python package for tire quality testing"
authors = ["Bezuglyj Vitaly <bevidm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.0"
torchvision = "0.15.1"
scikit-learn = "^1.3.1"
pandas = "^2.0.3"
opendatasets = "^0.1.22"
pathlib = "^1.0.1"
tqdm = "^4.66.1"
fire = "^0.5.0"
dvc = "^3.27.0"
dvc-gdrive = "^2.20.0"
lightning = "^2.1.0"
rich = "^13.6.0"
pexpect = "^4.8.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
dvc-s3 = "^2.23.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
Flake8-pyproject = "^1.2.3"
icecream = "^2.1.3"
mlflow = "^2.8.0"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
